Lecture 88 Media Query Breakpoints - Fix phone overlap at mobile size

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,5 +145,6 @@ p{
   .title-image{
     position: static;
     transform: rotate(0);
+    margin: auto auto;
   }
 }
